Fix padding in footer section and reduce lef-margin on footer-email element for medium devices in order for envelope icon to be visible in one line with the email

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -374,6 +374,9 @@ https://www.w3schools.com/howto/howto_js_scroll_to_top.asp */
         font-size: 3rem;
         text-shadow: 0.2rem 0.2rem #45464785;
     }
+    .footer-email > a {
+        margin-left: 0.2rem;
+    }
 }
 
 /* Display on large devices */
